--- a/WpfApp2/WpfApp2.csproj
+++ b/WpfApp2/WpfApp2.csproj
@@ -57,6 +57,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MessageItem.cs" />
     <Compile Include="TextMessageBox.xaml.cs">
       <DependentUpon>TextMessageBox.xaml</DependentUpon>
     </Compile>
